# Test_Bank_018

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  docker-compose.yml  harness-state.json
.caden/: config.json
.caden/harnesses/010_discovery/agents/: bdd-synthesizer.md  behavior-questioner.md  discovery-evaluator.md  discovery-orchestrator.md  epic-slicer.md
.caden/harnesses/020_architecture/agents/: architecture-adapter.md  architecture-evaluator.md
.caden/templates/010_discovery/contract/: sprint_contract.template.md
.caden/templates/010_discovery/deliverables/: bdd_slice.template.md  roadmap-manifest.template.json
.caden/templates/010_discovery/evaluation/: metrics_summary.template.json  verdict.template.json
.caden/templates/010_discovery/schemas/: execution-state.template.json  project-progress.template.txt
.caden/templates/020_architecture/contract/: sprint_contract.template.md
.caden/templates/020_architecture/deliverables/: architecture-manifest.template.json  effective_config.template.md  impact_report.template.md  policy_verification.template.md  scaffold_report.template.md
.caden/templates/020_architecture/evaluation/: metrics_summary.template.json  verdict.template.json
.caden/templates/020_architecture/schemas/: execution-state.template.json  project-progress.template.txt
.caden/templates/knowledge/: decisions_library.template.md  lessons_learned.template.md
.caden/templates/schemas/: harness-state.template.json
.claude/: settings.json
.claude/agents/: architecture-orchestrator.md  governance-weaver.md  scaffold-builder.md
.claude/commands/: caden-approve.md  caden-architect.md  caden-change.md  caden-continue.md  caden-discovery.md  caden-init.md  caden-restart.md  caden-review.md  caden-suspend.md  caden-sync.md
.github/workflows/: ci.yml
010_discovery/: execution-state.json  project-progress.txt
010_discovery/contract/: sprint_contract.md
010_discovery/deliverables/: behavior_transcript.md  roadmap-manifest.json  slicing_report.md
010_discovery/deliverables/slices/: evol-01.md  evol-02.md  evol-03.md  evol-04.md  final-01.md  mvp-01.md  stab-01.md  stab-02.md  stab-03.md  stab-04.md  tracer-01.md
010_discovery/eval/: metrics_summary.json  verdict.json
020_architecture/: execution-state.json  project-progress.txt
020_architecture/contract/: sprint_contract.md
020_architecture/deliverables/: architecture-manifest.json  effective_config.md  policy_verification.md  scaffold_report.md
020_architecture/eval/: metrics_summary.json  verdict.json
705_knowledge/: decisions_library.md  lessons_learned.md
900_documents/: brand.md  scope.md
900_documents/architecture/: architecture_style.md  design_system.md  stack_tec.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
frontend/: .dependency-cruiser.cjs  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/src/styles/: globals.css
